--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "babel-plugin-styled-components": "^1.10.7",
     "bootstrap": "^4.4.1",
     "gatsby": "^2.20.23",
+    "gatsby-plugin-styled-components": "^3.2.2",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "styled-components": "^5.1.0"
   },
   "devDependencies": {
     "prettier": "2.0.4"
