--- a/package.json
+++ b/package.json
@@ -18,17 +18,19 @@
     "@fortawesome/free-brands-svg-icons": "^5.13.0",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.9",
+    "@mdx-js/mdx": "^1.6.1",
+    "@mdx-js/react": "^1.6.1",
     "babel-plugin-styled-components": "^1.10.7",
     "bootstrap": "^4.4.1",
     "gatsby": "^2.20.23",
     "gatsby-image": "^2.4.0",
+    "gatsby-plugin-mdx": "^1.2.6",
     "gatsby-plugin-react-helmet": "^3.2.5",
     "gatsby-plugin-sharp": "^2.6.0",
     "gatsby-plugin-styled-components": "^3.2.2",
     "gatsby-remark-images": "^3.3.1",
     "gatsby-remark-prismjs": "^3.4.5",
     "gatsby-source-filesystem": "^2.2.5",
-    "gatsby-transformer-remark": "^2.7.5",
     "gatsby-transformer-sharp": "^2.5.0",
     "prismjs": "^1.20.0",
     "react": "^16.12.0",
