--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^4.4.1",
     "gatsby": "^2.20.23",
     "gatsby-image": "^2.4.0",
+    "gatsby-plugin-feed": "^2.5.1",
     "gatsby-plugin-mdx": "^1.2.6",
     "gatsby-plugin-react-helmet": "^3.2.5",
     "gatsby-plugin-sharp": "^2.6.0",
