--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.13.0",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.9",
+    "@illinois/react-use-local-storage": "^1.1.0",
     "@mdx-js/mdx": "^1.6.1",
     "@mdx-js/react": "^1.6.1",
     "babel-plugin-styled-components": "^1.10.7",
@@ -38,6 +39,7 @@
     "react-children-utilities": "^2.1.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0",
+    "react-responsive": "^8.0.3",
     "styled-components": "^5.1.0",
     "url-slug": "^2.3.1"
   },
