--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,14 @@
     "trailingComma": "all",
     "tabWidth": 4,
     "semi": false,
-    "singleQuote": true
+    "singleQuote": true,
+
+    "overrides": [
+        {
+            "files": ["package.json", "package-lock.json"],
+            "options": {
+                "tabWidth": 2
+            }
+        }
+    ]
 }
