--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gatsby-plugin-mdx": "^1.3.1",
     "gatsby-plugin-react-helmet": "^3.3.14",
     "gatsby-plugin-sharp": "^2.7.1",
+    "gatsby-plugin-sitemap": "^2.5.1",
     "gatsby-plugin-styled-components": "^3.3.14",
     "gatsby-remark-images": "^3.4.1",
     "gatsby-remark-prismjs": "^3.6.0",
