--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gatsby": "^2.25.3",
     "gatsby-image": "^2.4.21",
     "gatsby-plugin-feed": "^2.6.0",
+    "gatsby-plugin-force-trailing-slashes": "^1.0.4",
     "gatsby-plugin-mdx": "^1.3.1",
     "gatsby-plugin-react-helmet": "^3.3.14",
     "gatsby-plugin-sharp": "^2.7.1",
