Improve syntax highlighting

--- a/package.json
+++ b/package.json
@@ -34,9 +34,11 @@
     "gatsby-plugin-sitemap": "^4.10.0",
     "gatsby-plugin-styled-components": "^4.14.0",
     "gatsby-remark-images": "^5.11.0",
-    "gatsby-remark-prismjs": "^5.11.0",
+    "gatsby-remark-vscode": "^3.3.1",
     "gatsby-source-filesystem": "^3.14.0",
     "gatsby-transformer-sharp": "^3.14.0",
+    "Kotlin": "github:mathiasfrohlich/vscode-kotlin",
+    "material-theme": "github:Binaryify/OneDark-Pro",
     "prismjs": "^1.22.0",
     "react": "^16.14.0",
     "react-children-utilities": "^2.2.1",
