--- a/.prettierrc
+++ b/.prettierrc
@@ -1,15 +1,5 @@
 {
-    "trailingComma": "all",
-    "tabWidth": 4,
-    "semi": false,
-    "singleQuote": true,
-
-    "overrides": [
-        {
-            "files": ["package.json", "package-lock.json"],
-            "options": {
-                "tabWidth": 2
-            }
-        }
-    ]
+  "arrowParens": "avoid",
+  "semi": false,
+  "trailingComma": "all"
 }
